2.0.0a24
 - implemented polygon filters
 - condense context menus, add export context menu to all plots
 - add computation of Young's modulus and crosstalk correction
 - add user-defined fluorescence labels in QuickView
 - add legend to trace in QuickView
 - populate metadata panel
 - implement multiple subplots per plot, plot title, plot labels,
   legend, and event count
 - refactor data model
2.0.0a23
 - add more update functions to fix frozen macOS app
 - improve plot visualizations
2.0.0a22
 - add update functions to fix non-updating UI behavior on macOS
   in frozen application
 - dclab: circumvent UnicodeDecodeError on on macOS (frozen)
2.0.0a21
 - fix regression with isoelastics in QuickView
 - fix display of features as hue
 - functionalize plotting panel
 - add modify button and corresponding logic for dataslots
 - refactor analysis view into separate submodule
2.0.0a20
 - fix missing source files in previous release
2.0.0a19
 - fix plot matrix: size and buttons of elements
 - populate help menu
 - refactor scatter plot
 - show isoelastics in QuickView
 - introduce style sheets
 - fix box filter view not updated with filter data
 - add list of features to QuickView/Event as a new tab
 - allow to choose box filters
 - add preview for plot generation
 - other minor fixes
2.0.0a18
 - replace push buttons with tool buttons
   (try to overcome ugly rendering on macOS)
 - fix block matrix: toggle did not work without QuickView
 - make menu->quit functional
 - add help message in QuickView explaining how it works
 - add experimental zoom checkbox for trace view
 - additional refactoring
2.0.0a17
 - implement data/plot matrix states
 - implement data/plot matrix logic
 - implement basic Quick View functionalities
 - implement basic filtering functionalities
2.0.0a16
 - add documentation (from Shape-Out 1)
 - test deployment for macOS
2.0.0a1
 - first preview